# accel-datapath

./: .envrc  .gitignore  .gitmessage  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN_BATCH_DOORBELL.md  README.md  RESEARCH_PLAN.md  current.md  devenv.nix  devenv.yaml  dsa_benchmark_results.csv  flake.nix  hw_test_results.csv  iaa_architecture_spec.md  opencode.json  skills-lock.json  tonic-profile  trace_config.pbtx  xmake.lua
.cargo/: config.toml
.githooks/: commit-msg
.zed/: tasks.json
accel-rpc/: AGENTS.md  Cargo.toml  README.md
accel-rpc/accel-codec/: Cargo.toml
accel-rpc/accel-middleware/: Cargo.toml
accel-rpc/accel-middleware/src/: lib.rs
accel-rpc/async-bench/: Cargo.toml
accel-rpc/async-bench/benches/: async_overhead.rs
accel-rpc/async-bench/scripts/: export_control_floor.py  verify_control_floor_suite.sh
accel-rpc/async-bench/src/: bench_support.rs  lib.rs  main.rs
accel-rpc/dsa-ffi/: Cargo.toml  README.md
accel-rpc/dsa-ffi/scripts/: verify_async_memmove.sh  verify_live_memmove.sh
accel-rpc/dsa-ffi/src/: async_session.rs  lib.rs  validation.rs
accel-rpc/dsa-ffi/tests/: async_memmove_contract.rs  async_validation_cli_contract.rs  async_verifier_contract.rs  memmove_contract.rs  tokio_handle_contract.rs  validation_cli_contract.rs  verifier_contract.rs
accel-rpc/iax-ffi/src/: lib.rs
accel-rpc/idxd-rust/: README.md
accel-rpc/idxd-rust/scripts/: verify_package_inventory.sh
accel-rpc/idxd-rust/src/: lib.rs  validation.rs
accel-rpc/idxd-rust/tests/: async_memmove_contract.rs  tokio_handle_contract.rs  validation_cli_contract.rs
accel-rpc/idxd-sys/: build.rs
accel-rpc/tonic-profile/: Cargo.toml  README.md  build.rs
accel-rpc/tonic-profile/scripts/: claim_package_contract.py  proof_runner_common.py  run_s01_workloads.py  run_s02_evidence.py  run_s03_idxd_evidence.py  run_s04_claim_package.py  summarize_s04_claim_package.py  verify_downstream_async_handle.sh  verify_s01_ordinary_path.sh  verify_s02_trustworthy_evidence.sh  verify_s03_idxd_path.sh  verify_s04_claim_package.sh
accel-rpc/tonic-profile/src/: cli.rs  custom_codec.rs  main.rs  report.rs  runtime.rs  runtime_instrumentation.rs  service.rs  workload.rs
accel-rpc/tonic-profile/tests/: accelerated_mode_contract.rs  codec_accelerated_path.rs  codec_buffer_policy.rs  downstream_async_handle_contract.rs  endpoint_artifacts.rs  proto_shape_mode.rs  report_contract.rs  s04_claim_package.rs  selftest_smoke.rs  stage_evidence.rs  workload_manifest.rs  workload_metadata.rs
accel-rpc/tonic-profile/workloads/: s01_ordinary_matrix.json  s02_trustworthy_matrix.json  s03_idxd_matrix.json  s04_claim_package.json
benchmark/: benchmark_config.cpp  benchmark_config.hpp  benchmark_config.toml  (+6 more)
hw-eval/: AGENTS.md  Cargo.toml  README.md  plot_results.py  results.json  results_dedicated.json  results_shared.json  visualize_interactive.py
hw-eval/benches/: dsa_raw.rs
hw-eval/graphs/: dashboard-dedicated.html  dashboard-shared.html  dashboard.html  heatmap-dedicated.html  heatmap-shared.html  heatmap.html
hw-eval/src/: config.rs  dsa.rs  iax.rs  lib.rs  main.rs  report.rs  submit.rs  sw.rs
hw-eval/src/methodology/: dsa.rs  iax.rs  mod.rs  software.rs
hw-eval/tests/: cli_contract.rs
rust/: Cargo.toml
rust/accel-codec/src/: lib.rs
rust/iax-ffi/: Cargo.toml
rust/tonic-profile/src/: main.rs
(+587 files in other folders)
