[workspace]
members = [
    "accel-rpc/dsa-ffi",
    "dsa-bindings",
]
resolver = "2"

[workspace.package]
rust-version = "1.88"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { path = "accel-rpc/tonic/tonic" }
tonic-build = { path = "accel-rpc/tonic/tonic-build" }
prost = "0.14"
bytes = "1"
tower = "0.5"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
uninlined_format_args = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
