[package]
name = "tonic-profile"
version = "0.1.0"
edition = "2021"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = { path = "../tonic/tonic-prost-build" }

[dependencies]
tonic = { workspace = true, features = ["gzip"] }
prost = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
hdrhistogram = "7.5"
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
tonic-prost = { path = "../tonic/tonic-prost" }
dsa-ffi = { path = "../dsa-ffi" }
